# nemoclaw

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TRAINING-LOOP-BLOCKER.md  nemoclaw-action-plan.md  nemoclaw-architecture.md  nemoclaw-tdd-plan.md  nemoclaw-technical-spec.docx  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
articles/: part1-deployment.html  part1-deployment.md  part2-usage-workflows.html  part2-usage-workflows.md
docs/: INDEX.md  agent-auth-vault.md  agent-skills.md  benchmarks.md  cookbook.md  deployment-guide.md  e2e-test-guide.md  evolution-roadmap.md  hands-on-deployment-walkthrough.md  inter-agent-guide.md  kokoro-deployment.md  multi-machine-trust-model.md  openclaw-concepts.md  operations-guide.md  orchestrator-runtime.md  personal-assistant-architecture.md  personal-assistant-profile.md  phase1-deployment-log.md  runbook.md  second-brain-spec.md  use-cases.md  validation-report.md
docs/reviews/: codex-implementation-review.md  inference-topology-plan.md  mac-tts-deployment-plan.md  second-brain-spec.md  spark-gemma4-migration-checklist.md  validation-remediation-plan.md
orchestrator/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py  router_proxy.py  routing.py  sandbox_bridge.py  shared_mcp.py  storage.py  task_manager.py  whatsapp.py  work_queue.py
scripts/: agent-pass-vault.sh  configure-codex-sandbox.sh  install-hooks.sh  merge-openshell-policy-preset.py  openclaw-bootstrap-profile.sh  openclaw-gateway-supervise.sh  openclaw-ui-bridge.py  pre-push.sh  register-medgemma-provider.sh  run-codex-overnight.sh  setup-opencode-sandbox.sh  status.sh
tests/: conftest.py  helpers.py  models.py  pyproject.toml  settings.py
tests/phase0_preflight/: test_mac_prerequisites.py  test_pi_prerequisites.py  test_spark_prerequisites.py
tests/phase1_core/: test_gateway.py  test_idempotency.py  test_inference_routing.py  test_ollama_config.py  test_provider.py  test_sandbox_openclaw.py
tests/phase2_mac/: test_cross_machine_inference.py  test_mac_ollama.py  test_mac_provider.py  test_provider_switching.py
tests/phase3_pi/: conftest.py  test_dns.py  test_litellm_degraded.py  test_litellm_proxy.py  test_monitoring.py  test_tailscale_routing.py
tests/phase4_agents/: _openshell_cli.py  test_claude_sandbox.py  test_codex_sandbox.py  test_gemini_sandbox.py  test_multi_sandbox.py  test_network_policy.py  test_openclaw_integrity.py  test_sandbox_hardening.py  test_sandbox_isolation.py  test_secret_hygiene.py  test_ssrf_protection.py
tests/phase5_mobile/: test_remote_access.py  test_tailscale_gateway.py
tests/phase6_orchestrator/: test_cli.py  test_orchestrator.py  test_router_proxy.py  test_routing.py  test_runtime_integration.py  test_sandbox_bridge.py  test_shared_workspace.py  test_task_manager.py  test_whatsapp.py  test_work_queue.py
