[project]
name = "nemoclaw"
version = "0.1.0"
description = "TDD deployment framework for NemoClaw multi-node AI infrastructure"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
